# model2vec_rs_api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rustfmt.toml  setup.sh
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release.yml
hooks/: pre-push
src/: config.rs  error.rs  logger.rs  main.rs  models.rs  router.rs  server.rs
src/handlers/: embeddings.rs  health.rs  mod.rs  models_list.rs
