[package]
name = "model2vec-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "model2vec-api"
path = "src/main.rs"

[dependencies]
# Async runtime — absolute minimum features:
#   rt-multi-thread: multi-threaded scheduler + spawn
#   net: TcpListener, TcpStream
#   (no io-util → no bytes crate)
#   (no macros → using Runtime::new() manually)
tokio = { version = "*", features = ["rt-multi-thread", "net"] }

# HTTP/1.1 request parser — zero deps, already in lockfile via previous hyper
httparse = "1"

# Serialization — shared with model2vec-rs (no new download)
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# Embeddings
model2vec-rs = { version = "*", default-features = false, features = ["local-only", "fancy-regex"] }

# Tokenizer — already a transitive dep via model2vec-rs
tokenizers = { version = "0.21", default-features = false }

# Error handling — shared with model2vec-rs/tokenizers
thiserror = "*"
anyhow = "*"

# Logging — log already pulled by model2vec-rs/tokenizers
log = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"        # smaller binary, no unwinding tables
