[package]
name = "model2vec-api"
version = "0.0.1"
edition = "2024"
description = "Minimal, OpenAI-compatible embeddings server powered by model2vec-rs"
license = "MIT"
repository = "https://github.com/MinishLab/model2vec-api"
keywords = ["embeddings", "model2vec", "openai", "nlp"]
categories = ["ai", "science"]

[[bin]]
name = "model2vec-api"
path = "src/main.rs"

[dependencies]
# Async runtime — absolute minimum features:
#   rt-multi-thread: multi-threaded scheduler + spawn
#   net: TcpListener, TcpStream
#   (no io-util → no bytes crate)
#   (no macros → using Runtime::new() manually)
tokio = { version = "*", features = ["rt-multi-thread", "net"] }

# HTTP/1.1 request parser — zero deps, already in lockfile via previous hyper
httparse = "1"

# Serialization — shared with model2vec-rs (no new download)
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# Embeddings, hf-hub feature is required to download models.
model2vec-rs = { version = "*", default-features = false, features = ["hf-hub", "fancy-regex"] }

# Error handling — shared with model2vec-rs/tokenizers
thiserror = "*"
anyhow = "*"

# Logging — log already pulled by model2vec-rs/tokenizers
log = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"        # smaller binary, no unwinding tables

[lints.rust]
unsafe_code = "forbid"
unused_results = "deny"
