[package]
name = "model2vec-api"
version = "0.0.4"
edition = "2024"
description = "Minimal, OpenAI-compatible embeddings server powered by model2vec-rs"
license = "MIT"
repository = "https://github.com/MinishLab/model2vec-api"
keywords = ["embeddings", "model2vec", "openai", "nlp"]
categories = ["ai", "science"]

[[bin]]
name = "model2vec-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
httparse = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
model2vec-rs = { version = "0.2", default-features = false, features = ["hf-hub", "fancy-regex"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
itoa = "1"
async-trait = "0.1"
subtle = "2.6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"        # smaller binary, no unwinding tables

[lints.rust]
unsafe_code = "forbid"
unused_results = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Note: `multiple_crate_versions` lint is intentionally allowed.
# It warns about transitive deps inside model2vec-rs
# (e.g. base64 0.13 via tokenizers vs 0.22 via hf-hub)
# that we cannot fix from here.
multiple_crate_versions = "allow"
